@@ -1,3 +1,11 @@
+/* A lexical scanner generated by flex */
+
+/* Scanner skeleton version:
+ * $Id$
+ */
+
+//FUZZ: disable check_for_tab
+
 #define yy_create_buffer TAO_PSDL_yy_create_buffer
 #define yy_delete_buffer TAO_PSDL_yy_delete_buffer
 #define yy_scan_buffer TAO_PSDL_yy_scan_buffer
@@ -14,12 +22,6 @@
 #define yyout TAO_PSDL_yyout
 #define yyrestart TAO_PSDL_yyrestart
 #define yytext TAO_PSDL_yytext
-
-/* A lexical scanner generated by flex */
-
-/* Scanner skeleton version:
- * $Id$
- */
 
 #define FLEX_SCANNER
 #define YY_FLEX_MAJOR_VERSION 2
